Remove use of Double constructor